# dm-Shredmaster

./: .gitignore  README.md
.github/workflows/: build.yml  dm-shredmaster.mk
lv2/: Cargo.toml
lv2/dm-Shredmaster.lv2/: dm-Shredmaster_dsp.ttl  manifest.ttl
lv2/src/: lib.rs
nih-plug/src/: editor.rs  lib.rs
profiling/: Cargo.toml
profiling/benches/: shredmaster_bench.rs
profiling/src/: main.rs
scripts/: build-lv2-for-mod-desktop-mac.sh
shredmaster/: Cargo.toml
shredmaster/src/: clipper.rs  contour.rs  lib.rs  op_amp1.rs  op_amp2.rs  op_amp3.rs  op_amp4.rs  params.rs  smooth_parameters.rs  tone_stack.rs
shredmaster/src/clipper/: lookup_table.rs  oversample.rs
sketches/transfer-functions/: clipper.asc  contour.asc  contour.py  op-amp1.asc  op-amp1.py  op-amp2.asc  op-amp234.py  op-amp3.asc  op-amp4.asc  tone-stack.asc  tone-stack.py
